--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vite-plugin-glsl": "^1.2.1"
   },
   "dependencies": {
     "three": "^0.162.0"
