--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "lil-gui": "^0.19.2",
     "vite": "^5.1.4",
     "vite-plugin-glsl": "^1.2.1"
   },
