--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gifuct-js": "^2.1.2",
+    "noisejs": "^2.1.0",
     "simplex-noise": "^4.0.1",
     "three": "^0.162.0"
   }
